# seeker

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  RELEASE.md  index.html  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json
.claude/: launch.json  nocache-server.py
.github/workflows/: ci.yml  deploy-demo.yml  diag-demo.yml  pages.yml  release.yml
docs/: DEPLOY-DEMO.md  FEEDBACK.md  QUICKSTART.md  RELEASE.md  RISKS.md  ROADMAP.md  byo-smoke-checklist.md  proposal-agent-native.md  proposal-app-platform.md  proposal-app-tool-contract.md  proposal-batch10-ledger-cleanup.md  proposal-batch11-binding-and-contracts.md  proposal-business-layer-modularization.md  proposal-discovery-agent.md  proposal-p1-capability-center.md  proposal-project.md  proposal-scheduled-tasks.md  proposal-skills-full.md  proposal-skills-import.md  proposal-skills.md  proposal-smart-match.md  review-log.md  reviewer-onboarding.md
domain/: README.md
platform/: README.md
platform/runtime/: errors.js  types.invariants.ts
scripts/: verify-prod-resource.mjs
server/: demo-proxy.mjs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: ai.rs  capability.rs  config.rs  data.rs  docs.rs  docx.rs  embed.rs  jobseek.rs  lib.rs  mcp.rs  memory.rs  prompts.rs  secret.rs  web.rs
src-tauri/tests/fixtures/: mock_search_mcp.py
test/: app-tool-scope.test.mjs  iv-feedback.test.mjs  jobseek-market-value.test.mjs  markdown-render.test.mjs  match-result.test.mjs  project-model.test.mjs  registry-tools.test.mjs  resume-parse.test.mjs  run.test.mjs  schedule-model.test.mjs  skill-import.test.mjs  skill-model.test.mjs  validate.test.mjs
web/: index.html
web/apps/assets/: manifest.js
web/apps/assets/pages/: notes.js  prompts.js
web/apps/jobseek/: cards.js  data-helpers.js  data.js  manifest.js  monolith-globals.d.ts
web/apps/jobseek/logic/: agent-commands.js  copilot-actions.js  demo-seed.js  frame-query.js  intake-action.js  intake-job.js  interview.js  iv-feedback.js  job-actions.js  match-result.js  match.js  persistence.js  resume-modals.js  resume-parse.js  resumes.js  settings-jobseek.js  widget-actions-jobseek.js
web/apps/jobseek/pages/: actions.js  analysis.js  jobs.js  overview.js  skills.js
web/apps/jobseek/tools/: market-value-compute.js  market-value.js
web/domain/: README.md
web/domain/prompts/: prompts.json
web/platform/: outcome.js
web/platform/capability/app-tools/: readable.js  run.js  sandbox.js  validate.js
web/platform/capability/mcp/: confirm.js
web/platform/capability/widgets/: render.js
web/platform/guardrail/: index.js
web/platform/keys/: keys.js
web/platform/markdown/: render.js
web/platform/runtime/: desktop.js  index.js  types.d.ts  web.js
web/platform/shell/: about.js  ai-engine.js  ai-render.js  capability-center.js  connectors.js  copilot-chrome.js  data-store.js  dom.js  i18n.js  icons.js  md-edit.js  memory-docs.js  modal.js  nav.js  onboarding.js  profile.js  project-model.js  project-state.js  project-store.js  projects.js  registry.js  schedule-model.js  schedule-store.js  scheduler.js  schedules.js  settings.js  shell-boot.js  shell-globals.d.ts  shell-keys.js  shell-state.js  skill-model.js  skill-store.js  skills.js  toast.js  types.d.ts  widget-actions.js
