[package]
name = "app"
version = "0.1.0"
description = "Seeker — 本地优先的可复用平台基座(首个应用:求职岗位研究工作台)"
authors = ["Aklman <zhapar.dev@gmail.com>"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
# AI 网关:reqwest 用 rustls(避开 Windows OpenSSL),流式 + json
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "sync", "rt", "rt-multi-thread", "time"] }
tokio-util = "0.7"
futures-util = "0.3"
# 密钥:系统钥匙串(Win 凭据管理器 / macOS Keychain)
keyring = { version = "3", features = ["windows-native", "apple-native"] }
