[package]
name = "app"
version = "0.1.0"
description = "Seeker(探索者)— 本地优先的个人 AI Agent 平台:壳 + 可开关小应用(首个应用:求职工作台)"
authors = ["Aklman <zhapar.dev@gmail.com>"]
license = ""
repository = "https://github.com/aklmans/seeker"
publish = false
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
# AI 网关:reqwest 用 rustls(避开 Windows OpenSSL),流式 + json
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
# 注:process + io-util 供 #2 C4 MCP stdio 客户端(spawn server + 异步读写 JSON-RPC)
tokio = { version = "1", features = ["macros", "sync", "rt", "rt-multi-thread", "time", "process", "io-util"] }
tokio-util = "0.7"
futures-util = "0.3"
# 密钥:系统钥匙串(Win 凭据管理器 / macOS Keychain)
keyring = { version = "3", features = ["windows-native", "apple-native"] }
# 数据层:本地 SQLite(bundled = 自带,无系统依赖)
rusqlite = { version = "0.32", features = ["bundled"] }
# 能力层:trait 异步方法对 dyn 对象安全(#2 C2 起 invoke/contribute 含网络:嵌入/检索)
async-trait = "0.1"
# 块3b PDF 录入:解前端 data-URL 的 base64 + 从 PDF 提取文字(喂 AI 抽取的文本路径)
# 红线:pdf_extract_text 用 catch_unwind 兜畸形 PDF 的 panic —— **依赖默认 panic="unwind"**。
# 切勿为缩包给 release profile 设 panic="abort"(会令 catch_unwind 静默失效 → 坏 PDF 可重新崩应用);
# 如确需 abort,须另兜(如改在独立进程提取)。pdf-extract 为纯 Rust(无 C 绑定,免经典 C 解析器内存安全问题)。
base64 = "0.22"
pdf-extract = "0.7"
